# secret_santa

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml
secret_santa/: Dockerfile  docker-compose.yml  manage.py  pytest.ini  setup.py
secret_santa/api/: admin.py  models.py  serializers.py  urls.py  views.py
secret_santa/api/migrations/: 0001_initial.py  0002_alter_boxes_status_box_alter_giftrequest_box_and_more.py
secret_santa/api/tests/: conftest.py  factories.py
secret_santa/api/tests/api/: test_endpoints.py
secret_santa/boxes/: admin.py  apps.py  models.py  services.py  signals.py  tasks.py  urls.py
secret_santa/boxes/api/v1/: endpoints.py  serializers.py  urls.py
secret_santa/boxes/celery/: inform_using_mail.py
secret_santa/boxes/migrations/: 0001_initial.py  0002_boxcomments.py
secret_santa/boxes/tests/: conftest.py  factories.py
secret_santa/boxes/tests/boxes/: test_endpoints.py  test_model.py
secret_santa/front-react/: package-lock.json  package.json
secret_santa/front-react/src/: App.js  App_GiftRequest.js  index.js
secret_santa/front-react/src/components/: BoxesList.js  ConfirmRemovalModal.js  GiftRequestList.js  Header.js  Home.js  Home_GiftRequest.js  NewBoxesForm.js  NewBoxesModal.js  NewGiftRequestForm.js  (+1 more)
secret_santa/secret_santa/: celery.py  settings.py  urls.py
secret_santa/users/: models.py
secret_santa/users/migrations/: 0001_initial.py  0002_alter_user_groups.py  0003_alter_user_groups.py
secret_santa/users/services/: auth_service.py
(+12 files in other folders)
